[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/Enemy01.gd" type="Script" id=1]
[ext_resource path="res://Art/enemy_sprites/0011.png" type="Texture" id=2]
[ext_resource path="res://Art/enemy_sprites/0021.png" type="Texture" id=3]
[ext_resource path="res://Art/enemy_sprites/0031.png" type="Texture" id=4]
[ext_resource path="res://Art/enemy_sprites/0041.png" type="Texture" id=5]
[ext_resource path="res://Art/enemy_sprites/0051.png" type="Texture" id=6]
[ext_resource path="res://Art/enemy_sprites/0061.png" type="Texture" id=7]
[ext_resource path="res://Art/enemy_sprites/0071.png" type="Texture" id=8]
[ext_resource path="res://Art/enemy_sprites/0081.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 4.58591 )

[node name="Enemy01" type="Node2D" groups=[
"enemy",
]]
position = Vector2( 232.908, 177.196 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 3
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -5.1638, 0 )
shape = SubResource( 2 )

[node name="shoot_point" type="Node2D" parent="."]
position = Vector2( 7.52618, 0 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
